platform_versioned_docs/version-4.10.0/administer/authentication/access-keys.mdx
---
title: Access keys
sidebar_label: Access Keys
sidebar_position: 5
---

import Flow, { Step } from "@site/src/components/Flow";
import NavStep from "@site/src/components/NavStep";
import Button from "@site/src/components/Button";
import Label from "@site/src/components/Label";

Access keys provide authentication credentials for the platform. Users can use these keys with the vCluster CLI or HTTP tools like curl to interact with the platform.

## How access keys work

Access keys in vCluster platform function as authentication tokens that inherit the exact permissions of the user who creates them. When a user generates an access key, that key can perform any action the user has permission to perform. Any authenticated user on the vCluster platform can generate their own access keys through the user interface or API.

When making requests through the vCluster CLI or direct API calls, these keys authenticate the request with the platform. The platform then processes the request with the same privilege level as if the generating user performed the action directly.

## Scoped access keys

The platform supports limiting access key permissions by scoping them to specific resources. You can scope an access key to restrict its use to:

A single project within the platform, limiting actions to only that project's resources.

A particular tenant cluster, constraining operations to just that tenant cluster's components.

A specific namespace, allowing actions only within that defined namespace boundary.

Scoping provides an important security control by restricting what an access key can access. However, scoped access keys cannot access resources beyond what the generating user already has permission to access. The scoping mechanism reduces permissions rather than expanding them.

## Best practices

When implementing access keys in automated workflows, consider using scoped keys to improve security by limiting access to only the required resources.

For example, an automated deployment process typically needs access to just one project or tenant cluster. By scoping the access key appropriately, you protect other resources in case the key is compromised.

## Example use cases

CI/CD integration often requires access to platform resources. You can create project-scoped access keys for build pipelines to enable automated building and deployment while limiting potential security exposure. If your pipeline already issues OIDC tokens, [exchange one for a short-lived access key](token-exchange.mdx) instead of storing a long-lived key.

Automated deployment tools can use tenant cluster-scoped keys to manage deployments without gaining unnecessary access to other parts of your infrastructure.

Monitoring applications need to gather metrics and status information. Configure namespace-scoped keys for these systems to allow monitoring without granting broader permissions.

## Security considerations

Access key management requires careful attention to security. Rotate keys regularly to reduce the impact of potential breaches. Store keys securely using environment variables or a secrets management system rather than embedding them in code or configuration files.

Apply the principle of least privilege by using the most restrictive scope possible for each access key. When a process no longer requires an access key, delete it promptly to reduce your security exposure.

Changing or resetting a user's password deletes all of that user's existing access keys, including ones used by automation. If you rotate a password, plan to generate and distribute new access keys for any integrations that relied on the old ones. See [Change your password](../../use-platform/change-your-password.mdx) and [Reset a user's password](../users-permissions/managing-users/reset-password.mdx) for the exact effects of each method.

## Create an access key

<Flow id="create-access-key">
  <Step>
    Go to <NavStep>Access &amp; Secrets > Users &amp; Roles</NavStep>.
  </Step>
  <Step>
    Find the user you would like to generate an Access Key for from the list of
    users. Click the user.
  </Step>
  <Step>
    In the User Access Key management screen click the{" "}
    <Button>Create Access Key</Button>
    button.
  </Step>
  <Step>
    In the configuration sheet that opens, give the Access Key a display name
    in the <Label>Display Name</Label> field.
  </Step>
  <Step>
    <b>Optional:</b> Expand the <Label>Limit Scope</Label> section to select the clusters,
    namespaces, and tenant clusters you want to limit the access key scope to.
  </Step>
  <Step>
    Click <Button>Create</Button>.
  </Step>
  <Step>
    In the pop-up window, copy the generated access key. You cannot retrieve it again after closing this dialog.
  </Step>
  <Step>
    Click <Button>Ok</Button>.
  </Step>
</Flow>

## Use access keys

### Log in using CLI

You can use an access key to login to vCluster Platform using the vCluster CLI:

```
vcluster platform login my-vcluster-platform-url.com --access-key ACCESS_KEY
```

### Manually create kube config

Optionally, you can manually create your kube config by first generating an access key and then using the following template:  

```yaml title="my-kube-config.yaml"
apiVersion: v1
kind: Config
clusters:
- cluster:
    server: https://$LOFT_URL/kubernetes/management
    # Optional: if the server uses an insecure certificate
    # insecure-skip-tls-verify: true
  name: loft
contexts:
- context:
    cluster: loft
    user: loft
  name: loft
current-context: loft
users:
- name: loft
  user:
    token: $ACCESS_KEY
```

Replace the following placeholders:

* `$LOFT_URL`: the loft host you connect to
* `$ACCESS_KEY`: the access key

Save the modified template as `my-kube-config.yaml`. 

You can access your tenant cluster using the newly created kube config file:

```bash
KUBECONFIG=my-kube-config.yaml kubectl get users
```

## Related topics

- [Platform CLI hub](../../reference/platform-cli.mdx): UI-to-CLI equivalents across common Platform tasks, including creating access keys.
- [Access the management API](../clusters/advanced/multi-region/overview.mdx#access-the-management-api): on a [multi-region platform](../clusters/advanced/multi-region/overview.mdx), an access key is the only supported way to reach the management API.
- [OIDC token exchange](token-exchange.mdx): exchange a short-lived OIDC token for an access key instead of storing a long-lived one.
